# spreadsheet-analyzer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-linux.yml  build-macos-arm.yml  build-windows.yml  release.yml
assets/: app.rc.in
cmake/: compiler_warnings.cmake
cpm/: add_cxxopts.cmake  csv-parser.cmake  expected.cmake  fast_float.cmake  fmt.cmake  fontawesome.cmake  imgui.cmake  implot.cmake  nativefiledialog-extended.cmake  roboto_mono.cmake  roboto_sans.cmake  sdl-image.cmake  sdl.cmake  spdlog.cmake  uuid.cmake
inc/: csv_handling.hpp  dicts.hpp  window_context.hpp
src/: about_screen.cpp  csv_handling.cpp  main.cpp  plotting.cpp  string_helpers.cpp  textures.c  winapi.cpp  window_context.cpp
